# PySwarup

./: README.md  pyphisher.py
.github/workflows/: docker.yml  pypi.yml
files/: Dockerfile  pyproject.toml
